[package]
name = "librespot-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.2"
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.73"